--- a/.github/workflows/test-zig-project.yml
+++ b/.github/workflows/test-zig-project.yml
@@ -15,7 +15,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest]
-        day: [01, 02, 03, 04, 05, 06, 07, 08, 09, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25]
+        day: ['01', '02', '03', '04', '05', '06', '07', '08', '09', '10', '11', '12', '13', '14', '15', '16', '17', '18', '19', '20', '21', '22', '23', '24', '25']
         year: [2023]  # Add years as needed
         user: [xoyz69]
         lang: [zig]
@@ -30,9 +30,9 @@ jobs:
         id: check_dir
         run: |
           if [ -d "src/${{matrix.year}}/day-${{matrix.day}}/${{matrix.lang}}/${{matrix.user}}" ]; then
-            run: echo "{dir_exists}={true}" >> $GITHUB_STATE
+            echo "{dir_exists}={true}" >> $GITHUB_STATE
           else
-            run: echo "{dir_exists}={false}" >> $GITHUB_STATE
+            echo "{dir_exists}={false}" >> $GITHUB_STATE
           fi
       - name: Run tests
         if: steps.check_dir.outputs.dir_exists == 'true'
