--- a/.github/workflows/test-zig-project.yml
+++ b/.github/workflows/test-zig-project.yml
@@ -10,33 +10,27 @@ on:
 
 jobs:
   test:
-    name: ${{matrix.year}}/day-${{matrix.day}}/${{matrix.lang}}/${{matrix.user}}
-
-    strategy:
-      matrix:
-        os: [ubuntu-latest]
-        day: ['01', '02', '03', '04', '05', '06', '07', '08', '09', '10', '11', '12', '13', '14', '15', '16', '17', '18', '19', '20', '21', '22', '23', '24', '25']
-        year: [2023]  # Add years as needed
-        user: [xoyz69, FelixLeander]
-        lang: [zig]
-
-    runs-on: ${{matrix.os}}
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - uses: goto-bus-stop/setup-zig@v2
         with:
           version: 0.13.0
-      - name: Check if directory exists
-        id: check_dir
+      - name: Run Tests
         run: |
-          if [ -d "src/${{matrix.year}}/day-${{matrix.day}}/${{matrix.lang}}/${{matrix.user}}" ]; then
-            echo "{dir_exists}={true}" >> $GITHUB_STATE
-          else
-            echo "{dir_exists}={false}" >> $GITHUB_STATE
-          fi
-      - name: Run tests
-        if: steps.check_dir.outputs.dir_exists == 'true'
-        run: zig build src/${{matrix.year}}/day-${{matrix.day}}/${{matrix.lang}}/${{matrix.user}}
+          for year in /src/*/; do
+            for day in /src/year/*/; do
+              for user in /src/year/day/*/; do
+                path="src/${year}/day-${day}/zig/${user}"
+                if [ -d "$path" ]; then
+                  echo "Running tests for $path"
+                  zig build $path || exit 1
+                else
+                  echo "Directory $path does not exist, skipping."
+                fi
+              done
+            done
+          done
 
   lint:
     name: "Checking Zig lint"
