--- a/.github/workflows/test-rust-project.yml
+++ b/.github/workflows/test-rust-project.yml
@@ -14,7 +14,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Setup Rust 
-        uses: actions/setup-rust@v1
+        uses: hecrj/setup-rust-action@v2
       - name: Cache Cargo registry
         uses: actions/cache@v3
         with:
